--- a/main.html
+++ b/main.html
@@ -45,6 +45,6 @@
         'msg': 'msg',
     };
     $().ready(function(){
-        $().fontManage();
+        $().fontManage(settings);
     });
 </script>
